# lonelyBox

./: .gitignore  CMakeLists.txt  README.md
assets/: lonelyBoxColors.c
src/: character.cpp  common.h  entities.h  entitymanager.c  entitymanager.cpp  entityupdaters.c  entityupdaters.cpp  main.c  main.cpp  scenes.c  scenes.h
